Add morikann to reviewers

--- a/.github/workflows/review-assign.yaml
+++ b/.github/workflows/review-assign.yaml
@@ -5,7 +5,7 @@ on:
     types: [ opened, ready_for_review ]
 
 env:
-  REVIEWERS: 'Yamasaki-pan961'
+  REVIEWERS: Yamasaki-pan961, morikann
 
 jobs:
   assign:
