--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_svg: ^2.0.7
+
+  yumemi_weather:
+    git:
+      url: https://github.com/yumemi-inc/flutter-training-template.git
+      ref: main
+      path: packages/yumemi_weather
 
 dev_dependencies:
   blendthink_lints: ^3.0.0
