--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^2.4.6
+  flutter_gen_runner: ^5.3.1
+
+flutter_gen:
+  integrations:
+    flutter_svg: true
+
+
 flutter:
   uses-material-design: true
 
