--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 
   flutter_svg: ^2.0.7
 
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
   yumemi_weather:
     git:
       url: https://github.com/yumemi-inc/flutter-training-template.git
@@ -25,6 +27,8 @@ dev_dependencies:
 
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.3.1
+  freezed: ^2.4.1
+  json_serializable: ^6.7.1
 
 flutter_gen:
   integrations:
