--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,3 +4,7 @@ linter:
   rules:
     sort_pub_dependencies: false
     always_use_package_imports: true
+
+analyzer:
+  plugins:
+    - custom_lint
