--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  mockito: ^5.4.2
   riverpod_annotation: ^2.1.5
   yumemi_weather:
     git:
